--- a/LibrarySystemUI/Views/Question/GetLastFiftyQuestions.cshtml
+++ b/LibrarySystemUI/Views/Question/GetLastFiftyQuestions.cshtml
@@ -10,11 +10,11 @@
 <div id="div_details">
     </br>
     </br>
-    <button type="button" class="btn btn-default btn-success" id="btn_GetQuestions" data-dismiss="modal" onclick="objQuestion.GetLastfiftyQuestions()">Get Last 50 questions from stack overflow</button>
+    <button type="button" class="btn btn-default btn-success" style="float:right;" id="btn_GetQuestions" data-dismiss="modal" onclick="objQuestion.GetLastfiftyQuestions()">Get Last 50 questions from stack overflow</button>
     </br>
     </br>
     <div class="col-xs-6">
-        <h3>Details</h3>
+          <h3>Details</h3>
         <ul class="styledListing">
             <li>
                 <label>QuestionId :</label> <span id="spn_QuestionId"></span>
