--- a/LibrarySystemUI/Views/Book/BookCollection.cshtml
+++ b/LibrarySystemUI/Views/Book/BookCollection.cshtml
@@ -5,18 +5,20 @@
 }
 
 <h2>BookCollection</h2>
+
+@*<p>
+        @Html.ActionLink("Create New", "Create")
+    </p>*@
+<select id="filterParentCategory" data-placeholder="" style="width:12%;">
+    <option value='0' class='selected'>Select Category</option>
+</select>
+<select id="filterSubCategory" data-placeholder="" style="width:12%;">
+    <option value='0' class='selected'>Select SubCategory</option>
+</select>
+<button type="button" class="btn btn-default btn-success" data-dismiss="modal" style="float:right;" onclick="objBook.RedirectToQuestion()">Get Last 50 questions from stack overflow</button>
 @using (Html.BeginForm())
 {
-    @*<p>
-            @Html.ActionLink("Create New", "Create")
-        </p>*@
-    <select id="filterParentCategory" data-placeholder="Order Status" style="width:12%;">
-    </select>
-    <select id="filterSubCategory" data-placeholder="Order Status" style="width:12%;">
-    </select>
-    <button type="button" class="btn btn-default btn-success" data-dismiss="modal" onclick="objBook.RedirectToQuestion()">Get Last 50 questions from stack overflow</button>
-
-    <table class="table">
+    <table class="table" id="tbl_BookData">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.BookName)
